--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "nuxt-ts -open",
-    "build": "nuxt-ts build",
+    "build": "nuxt-ts build --standalone",
     "start": "nuxt-ts start",
     "generate": "nuxt-ts generate",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
@@ -13,6 +13,7 @@
   "dependencies": {
     "@nuxt/typescript-runtime": "^2.0.1",
     "@nuxtjs/axios": "^5.13.1",
+    "bootstrap-vue-treeview": "^1.0.8",
     "core-js": "^3.8.3",
     "nuxt": "^2.14.12",
     "nuxt-property-decorator": "^2.9.1"
