--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@nuxt/typescript-runtime": "^2.0.1",
     "@nuxtjs/axios": "^5.13.1",
+    "@nuxtjs/proxy": "^2.1.0",
     "bootstrap-vue-treeview": "^1.0.8",
     "core-js": "^3.8.3",
     "nuxt": "^2.14.12",
